# backendcare

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/backendcare/: __init__.py  __main__.py  cli.py  converter.py  transformer.py
tests/: conftest.py  test_aliased_imports.py  test_basic_imports.py  test_comments.py  test_file_operations.py  test_import_deduplication.py  test_import_inside_function.py  test_multiline_imports.py  test_special_imports.py
