[project]
name = "backendcare"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Taylor Monacelli", email = "taylormonacelli@gmail.com" }
]
dependencies = [
    "libcst==1.8.2",
]
readme = "README.md"
requires-python = "==3.13.5"

[project.urls]
Homepage = "https://github.com/gkwa/backendcare"
Repository = "https://github.com/gkwa/backendcare"

[project.scripts]
backendcare = "backendcare:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/backendcare"]

[tool.ruff.lint]
extend-select = ["I"]

[dependency-groups]
dev = [
    "pytest==8.4.1",
]

